Made profile picture to a link to the userprofile and fixed small layout issues

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -5,12 +5,12 @@ p { padding: 10px; }
 
 .boxright { float: right; width: 18%; height: 98%; border-radius: 5px; margin: 5px; background: #7e7e7e; color: #000000; }
 	
-.rightinnerboxtop { width: 90%; height: 28%; border-radius: 5px; background: #a2a2a2; color:#000000; margin: 0 auto; margin-top: 5%; }
-.rightinnerboxtop input { float: right; margin-right: 10px; }
-.rightinnerboxtop a { float: right; margin-right: 10px; }
-.rightinnerboxtoplinks { margin-left: 70px; height: 100%; }
+.rightinnerboxtop { width: 90%; height: 28%; line-height: 100%; border-radius: 5px; background: #a2a2a2; color:#000000; margin: 0 auto; margin-top: 5%;}
+.rightinnerboxtop input { float: right; }
+.rightinnerboxtop p a { float: right; margin-right: 10px;}
+.rightinnerboxtoplinks { margin-left: 5px; margin-top: 5px; height: 92%; }
 .rightinnerboxtoplinks a { float: left; }
-.profilepic { float: left; margin: 3px; width: 48px; height: 64px; }
+.profilepic { float: right; margin: 3px; width: 48px; height: 64px; }
 .profilepic img { border-radius: 5px; }
 	
 .rightinnerboxbottom { width: 90%; height: 65%; border-radius: 5px; background: #a2a2a2; color: #000000; margin: 0 auto; margin-top: 5%; padding-top: 5%; }
